consensusj-jsonrpc: Improved doc, testing, spec compliance